# healpix

./: .cvsignore  CMakeLists.txt  ChangeLog  SConscript  azure-pipelines.yml  healpixLib.py
cmt/: .cvsignore  requirements
doc/: release.notes
healpix/: AlmOp.h  CosineBinner.h  HealPixel.h  HeallpixMap.h  Healpix.h  HealpixArray.h  HealpixArrayIO.h  HealpixMap.h  HealpixRegion.h  Map.h  alm_filter_tools.h
healpix/base/: alm_filter_tools.h
src/: AlmOp.cxx  CosineBinner.cxx  HealPixel.cxx  Healpix.cxx  HealpixArrayIO.cxx  HealpixMap.cxx  HealpixRegion.cxx  Map.cxx  alm_filter_tools.cxx  mainpage.h
src/base/: alm_filter_tools.cc  alm_filter_tools.h  alm_map_tools.cc  fitsio.h
src/test/: TestHealpix.h  TestHealpixArray.h  test_healpix.cxx
